version/0.17/_sources/api/solver/_autosummary/settings/heat_mass_transfer.rst.txt
:orphan:

.. _heat_mass_transfer:

heat_mass_transfer
==================

.. autoclass:: ansys.fluent.core.solver.settings_232.heat_mass_transfer.heat_mass_transfer
    :show-inheritance:

.. rubric:: Attributes

==================================================================   ============================================================================================

Attribute                                                                                                                                                 Summary

==================================================================   ============================================================================================
:ref:`cavitation <cavitation>`                                           Enable/disable turbulent diffusion treatment between phases participating in cavitation.

:ref:`evaporation_condensation <evaporation_condensation>`                                                        Evaporation-condensation advanced options menu.

:ref:`boiling <boiling>`                                                                                                           Boiling advanced options menu.

:ref:`area_density <area_density_1>`                                                                                               Interfacial area density menu.

:ref:`alternative_energy_treatment <alternative_energy_treatment>`                              Alternative treatment of latent heat source due to mass transfer.

==================================================================   ============================================================================================

.. rubric:: Included in:

================================================   ===============================================

Parent                                                                                     Summary

================================================   ===============================================
:ref:`multiphase_numerics <multiphase_numerics>`       Enter the multiphase numerics options menu.

================================================   ===============================================

